# QWER

./: .gitmodules  CMakeLists.txt
include/: install.h  qwer.h  resolve.h
src/: install.cpp  main.cpp  resolve.cpp
